[gd_scene load_steps=17 format=2]

[ext_resource path="res://Brick/Brick_Container.gd" type="Script" id=1]
[ext_resource path="res://Paddle/Paddle.tscn" type="PackedScene" id=2]
[ext_resource path="res://Ball/Ball_Container.gd" type="Script" id=3]
[ext_resource path="res://Game.gd" type="Script" id=4]
[ext_resource path="res://UI/Pause_Menu.tscn" type="PackedScene" id=5]
[ext_resource path="res://Wall/Wall.gd" type="Script" id=6]
[ext_resource path="res://UI/HUD.tscn" type="PackedScene" id=7]
[ext_resource path="res://UI/Instructions.tscn" type="PackedScene" id=8]
[ext_resource path="res://Assets/brick.wav" type="AudioStream" id=9]
[ext_resource path="res://Assets/score.wav" type="AudioStream" id=10]
[ext_resource path="res://Assets/bank.wav" type="AudioStream" id=11]
[ext_resource path="res://Assets/wall_hit.wav" type="AudioStream" id=12]
[ext_resource path="res://Assets/fall.wav" type="AudioStream" id=13]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 100, 500 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 612, 100 )

[sub_resource type="Environment" id=3]
background_mode = 4
dof_blur_near_enabled = true
dof_blur_near_distance = 1.3
glow_enabled = true
glow_bloom = 0.03
adjustment_enabled = true

[node name="Game" type="Node2D"]
script = ExtResource( 4 )

[node name="Background" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 800.0
color = Color( 0, 0, 0, 1 )

[node name="Wall_Container" type="CanvasLayer" parent="."]

[node name="Wall_Left" type="StaticBody2D" parent="Wall_Container"]
script = ExtResource( 6 )

[node name="ColorRect" type="ColorRect" parent="Wall_Container/Wall_Left"]
margin_left = -190.0
margin_top = -100.0
margin_right = 10.0
margin_bottom = 900.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall_Container/Wall_Left"]
position = Vector2( -90, 400 )
shape = SubResource( 1 )

[node name="Wall_Right" type="StaticBody2D" parent="Wall_Container"]
position = Vector2( 1024, 0 )
script = ExtResource( 6 )

[node name="ColorRect" type="ColorRect" parent="Wall_Container/Wall_Right"]
margin_left = -10.0
margin_top = -100.0
margin_right = 190.0
margin_bottom = 900.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall_Container/Wall_Right"]
position = Vector2( 90, 400 )
shape = SubResource( 1 )

[node name="Wall_Top" type="StaticBody2D" parent="Wall_Container"]
script = ExtResource( 6 )

[node name="ColorRect" type="ColorRect" parent="Wall_Container/Wall_Top"]
margin_left = -100.0
margin_top = -190.0
margin_right = 1124.0
margin_bottom = 10.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall_Container/Wall_Top"]
position = Vector2( 512, -90 )
shape = SubResource( 2 )

[node name="Brick_Container" type="Node2D" parent="."]
script = ExtResource( 1 )

[node name="Paddle_Container" type="Node2D" parent="."]

[node name="Paddle" parent="Paddle_Container" instance=ExtResource( 2 )]
position = Vector2( 462, 740 )

[node name="Ball_Container" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 3 )

[node name="UI" type="CanvasLayer" parent="."]

[node name="HUD" parent="UI" instance=ExtResource( 7 )]
pause_mode = 0
visible = false

[node name="Pause_Menu" parent="UI" instance=ExtResource( 5 )]
visible = false

[node name="Instructions" parent="UI" instance=ExtResource( 8 )]
pause_mode = 2

[node name="Score_Sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )

[node name="Bank_Sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -15.0

[node name="Brick_Sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -15.0

[node name="Fall_Sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )

[node name="Wall_Sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
volume_db = -20.0
